# fff-gpui

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: release-macos.yaml
.zed/: tasks.json
src/: assets.rs  config.rs  editor.rs  hotkey.rs  log.rs  login_item.rs  main.rs  menubar.rs  path_shortening.rs  picker.rs  preview.rs  service.rs  text_field.rs  theme.rs
