[package]
name = "fff-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
fff-search = { version = "0.6", features = ["zlob"]}
smol = "2"
unicode-segmentation = "1"
anyhow = "1"
syntect = "5"
mimalloc = "0.1"
two-face = "0.5.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
