[package]
name = "fff-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
fff-search = { version = "0.6", features = ["zlob"] }
fff-query-parser = { version = "0.6", features = ["zlob"] }
fff-grep = { version = "0.6" }
smol = "2"
unicode-segmentation = "1"
anyhow = "1"
async-channel = "2"
global-hotkey = "0.8.0"
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
serde_json = "1"
toml = "0.8"
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-regex = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
mimalloc = "0.1"
objc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
